[package]
name = "websocket-extensions"
version = "0.2.0"
edition = "2021"
description = "WebSocket Sec-WebSocket-Extensions header parsing and extension negotiation"
license = "MIT"
repository = "https://github.com/hey-jj/websocket-extensions"
readme = "README.md"
keywords = ["websocket", "rfc6455", "extensions", "permessage", "protocol"]
categories = ["network-programming", "web-programming::websocket", "parser-implementations"]

[dependencies]
